cmake_minimum_required(VERSION 3.13)
file(GLOB sources "*.cpp")
foreach(source ${sources})
    get_filename_component(base "${source}" NAME_WE)
    add_executable("codec-${base}" "${source}")
    set_property(TARGET "codec-${base}" PROPERTY CXX_STANDARD 20)
    target_link_libraries("codec-${base}" "codec")
    add_test("codec-${base}" "codec-${base}")
endforeach()
